src/log/build_2022-08-04_17-09-51/robot_control/stderr.log
  File "C:\dev_robot\src\install\Lib\site-packages\robot_control\Control_V3.py", line 71
    match state:
          ^
SyntaxError: invalid syntax

